--- a/index.html
+++ b/index.html
@@ -16,6 +16,70 @@
         <source src="video/video1.mp4" type="video/mp4">
     </video>
     </div>
-    
+    <div class="row">
+    <div class="img mt-5 col-md-6"><img src="img/logo.png" alt="" width="160px" ></div>
+    <nav class="navbar col-md-6 ">
+         <ul class="lista">
+            <li class="dropdown " >
+                <a href="" class="dropdown-toggle">CURSURI IN SALA</a>
+                <ul class="dropdown-content">
+                    <li><a href="#">Timisoare</a></li>
+                    <li><a href="#">Oradea</a></li>
+                    <li><a href="#">Bucuresti</a></li>
+                    <li><a href="#">Arad</a></li>
+                    <li><a href="#">Sibiu</a></li>
+                    <li><a href="#">Brasov</a></li>
+                </ul>
+
+            </li>
+             <li class="iteme">
+                 <a href="" >CURSURI ONLINE</a>
+
+                </li>
+             <li class="dropdown">
+                 <a href="" class="dropdown-toggle">CORPORATE</a>
+                 <ul class="dropdown-content">
+                     <li><a href="#">Cursuri</a></li>
+                     <li><a href="#">Angajatori</a></li>
+                 </ul>
+                </li>
+             <li class="dropdown">
+                 <a href="" class="dropdown-toggle">CERTIFICARI</a>
+                 <ul class="dropdown-content">
+                     <li><a href="#">Centru</a></li>
+                     <li><a href="#">Acreditare</a></li>
+                     <li><a href="#">Certiprime</a></li>
+                 </ul>
+                </li>
+             <li class="dropdown">
+                 <a href="" class="dropdown-toggle">DESPRE NOI</a>
+                 <ul class="dropdown-content">
+                     <li><a href="">IT School</a></li>
+                     <li><a href="">FQA</a></li>
+                     <li><a href="">Traineri</a></li>
+                     <li><a href="">Devino trainer</a></li>
+                 </ul>
+                </li>
+             <li class="image">
+                 <a href=""> PODCAST</a>
+                </li>
+             <li class="iteme">
+                 <a href="">CONTACT</a>
+                </li>
+         </ul>
+        
+      </nav>
+    </div>
+    <div>
+        <h1 class="h1">Bine ai venit!</h1>
+        <p class="paragraf1">Accelerator de cariera in {programare}</p>
+        <p class="paragraf2">Cursuri IT pentru incepatori cu certificare 
+            <span><img src="img/microsoft.png" alt="" width="150px"></span>
+            <span><img src="img/adobe.png" alt="" width="100px"></span>
+            <span><img src="img/apple.png" alt="" ></span>
+            <span><img src="img/minister.png" alt="" width="100px"></span>
+        </p>
+        <button class="button">Afla mai multe</button>
+    </div>
 </body>
 </html>
